enhanced code